--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@inotom/vue-go-top": "^1.3.0",
     "@popperjs/core": "^2.11.4",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
-    "vue": "^3.2.31"
+    "swiper": "^8.0.7",
+    "vue": "^3.2.31",
+    "vue-awesome-swiper": "^5.0.1",
+    "vue-carousel-3d": "^1.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
