--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "swiper": "^8.0.7",
     "vue": "^3.2.31",
     "vue-awesome-swiper": "^5.0.1",
-    "vue-carousel-3d": "^1.0.1"
+    "vue-carousel-3d": "^1.0.1",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
