--- a/package.json
+++ b/package.json
@@ -22,5 +22,14 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
     "vite": "^2.9.0"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "tabWidth": 2,
+    "printWidth": 80,
+    "bracketSpacing": true,
+    "bracketSameLine": true
   }
 }
