--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start":"node server.js"
   },
   "dependencies": {
     "@inotom/vue-go-top": "^1.3.0",
@@ -13,6 +14,8 @@
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "express": "^4.17.3",
+    "serve-static": "^1.15.0",
     "swiper": "^8.0.7",
     "vue": "^3.2.31",
     "vue-awesome-swiper": "^5.0.1",
